penambahan swager untuk getAllusers
